// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IntensitySparkline Gradient and Markers should handle custom color override 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <RNSVGSvgView
    bbHeight={40}
    bbWidth={120}
    focusable={false}
    height={40}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 40,
          "width": 120,
        },
      ]
    }
    width={120}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0,
              640580914,
              0.1,
              643140399,
              0.2,
              644390712,
              0.3,
              653895717,
              0.4,
              654282496,
              0.5,
              653224960,
              0.6,
              652628224,
              0.7,
              651707157,
              0.8,
              650520616,
              0.9,
              653017210,
              1,
              648759228,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="painGradientBg"
          x1="0"
          x2="0"
          y1="1"
          y2="0"
        />
        <RNSVGLinearGradient
          gradient={
            [
              0,
              -13730510,
              0.1,
              -11171025,
              0.2,
              -9920712,
              0.3,
              -415707,
              0.4,
              -28928,
              0.5,
              -1086464,
              0.6,
              -1683200,
              0.7,
              -2604267,
              0.8,
              -3790808,
              0.9,
              -1294214,
              1,
              -5552196,
            ]
          }
          gradientTransform={null}
          gradientUnits={1}
          name="painGradientLine"
          x1="0"
          x2="0"
          y1={36}
          y2={4}
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          {
            "brushRef": "painGradientBg",
            "type": 1,
          }
        }
        height={40}
        propList={
          [
            "fill",
          ]
        }
        rx={4}
        width={120}
        x={0}
        y={0}
      />
      <RNSVGPath
        d="M 4,17.088 L 13.333333333333334,15.840000000000003 L 22.666666666666668,16.800000000000004 L 32,16.800000000000004 L 41.333333333333336,16.800000000000004 L 50.66666666666667,16.800000000000004 L 60,16.800000000000004 L 69.33333333333334,16.800000000000004 L 78.66666666666667,16.800000000000004 L 88,16.800000000000004 L 97.33333333333334,16.800000000000004 L 106.66666666666667,16.800000000000004 L 116,16.8"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4294901760,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGCircle
        cx={4}
        cy={20}
        fill={
          {
            "payload": 4293880832,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={13.333333333333334}
        cy={13.600000000000001}
        fill={
          {
            "payload": 4292363029,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={22.666666666666668}
        cy={16.8}
        fill={
          {
            "payload": 4293284096,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`IntensitySparkline Gradient and Markers should render markers for all readings 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <RNSVGSvgView
    bbHeight={40}
    bbWidth={120}
    focusable={false}
    height={40}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 40,
          "width": 120,
        },
      ]
    }
    width={120}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0,
              640580914,
              0.1,
              643140399,
              0.2,
              644390712,
              0.3,
              653895717,
              0.4,
              654282496,
              0.5,
              653224960,
              0.6,
              652628224,
              0.7,
              651707157,
              0.8,
              650520616,
              0.9,
              653017210,
              1,
              648759228,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="painGradientBg"
          x1="0"
          x2="0"
          y1="1"
          y2="0"
        />
        <RNSVGLinearGradient
          gradient={
            [
              0,
              -13730510,
              0.1,
              -11171025,
              0.2,
              -9920712,
              0.3,
              -415707,
              0.4,
              -28928,
              0.5,
              -1086464,
              0.6,
              -1683200,
              0.7,
              -2604267,
              0.8,
              -3790808,
              0.9,
              -1294214,
              1,
              -5552196,
            ]
          }
          gradientTransform={null}
          gradientUnits={1}
          name="painGradientLine"
          x1="0"
          x2="0"
          y1={36}
          y2={4}
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          {
            "brushRef": "painGradientBg",
            "type": 1,
          }
        }
        height={40}
        propList={
          [
            "fill",
          ]
        }
        rx={4}
        width={120}
        x={0}
        y={0}
      />
      <RNSVGPath
        d="M 4,21.029760000000003 L 13.333333333333334,17.3568 L 22.666666666666668,16.224 L 32,18.720000000000002 L 41.333333333333336,16.800000000000004 L 50.66666666666667,16.800000000000004 L 60,16.800000000000004 L 69.33333333333334,16.800000000000004 L 78.66666666666667,16.800000000000004 L 88,16.800000000000004 L 97.33333333333334,16.800000000000004 L 106.66666666666667,16.800000000000004 L 116,16.8"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "brushRef": "painGradientLine",
            "type": 1,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGCircle
        cx={4}
        cy={29.6}
        fill={
          {
            "payload": 4285046584,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={13.333333333333334}
        cy={20}
        fill={
          {
            "payload": 4293880832,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={22.666666666666668}
        cy={10.399999999999999}
        fill={
          {
            "payload": 4291176488,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={32}
        cy={23.2}
        fill={
          {
            "payload": 4294938368,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={41.333333333333336}
        cy={16.8}
        fill={
          {
            "payload": 4293284096,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`IntensitySparkline Gradient and Markers should render with gradient stroke 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <RNSVGSvgView
    bbHeight={40}
    bbWidth={120}
    focusable={false}
    height={40}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 40,
          "width": 120,
        },
      ]
    }
    width={120}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0,
              640580914,
              0.1,
              643140399,
              0.2,
              644390712,
              0.3,
              653895717,
              0.4,
              654282496,
              0.5,
              653224960,
              0.6,
              652628224,
              0.7,
              651707157,
              0.8,
              650520616,
              0.9,
              653017210,
              1,
              648759228,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="painGradientBg"
          x1="0"
          x2="0"
          y1="1"
          y2="0"
        />
        <RNSVGLinearGradient
          gradient={
            [
              0,
              -13730510,
              0.1,
              -11171025,
              0.2,
              -9920712,
              0.3,
              -415707,
              0.4,
              -28928,
              0.5,
              -1086464,
              0.6,
              -1683200,
              0.7,
              -2604267,
              0.8,
              -3790808,
              0.9,
              -1294214,
              1,
              -5552196,
            ]
          }
          gradientTransform={null}
          gradientUnits={1}
          name="painGradientLine"
          x1="0"
          x2="0"
          y1={36}
          y2={4}
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          {
            "brushRef": "painGradientBg",
            "type": 1,
          }
        }
        height={40}
        propList={
          [
            "fill",
          ]
        }
        rx={4}
        width={120}
        x={0}
        y={0}
      />
      <RNSVGPath
        d="M 4,19.881600000000002 L 13.333333333333334,17.088 L 22.666666666666668,15.840000000000003 L 32,16.800000000000004 L 41.333333333333336,16.800000000000004 L 50.66666666666667,16.800000000000004 L 60,16.800000000000004 L 69.33333333333334,16.800000000000004 L 78.66666666666667,16.800000000000004 L 88,16.800000000000004 L 97.33333333333334,16.800000000000004 L 106.66666666666667,16.800000000000004 L 116,16.8"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "brushRef": "painGradientLine",
            "type": 1,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGCircle
        cx={4}
        cy={26.4}
        fill={
          {
            "payload": 4294551589,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={13.333333333333334}
        cy={20}
        fill={
          {
            "payload": 4293880832,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={22.666666666666668}
        cy={13.600000000000001}
        fill={
          {
            "payload": 4292363029,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={32}
        cy={16.8}
        fill={
          {
            "payload": 4293284096,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`IntensitySparkline Snapshot Tests should match snapshot with all intensity markers 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <RNSVGSvgView
    bbHeight={40}
    bbWidth={120}
    focusable={false}
    height={40}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 40,
          "width": 120,
        },
      ]
    }
    width={120}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0,
              640580914,
              0.1,
              643140399,
              0.2,
              644390712,
              0.3,
              653895717,
              0.4,
              654282496,
              0.5,
              653224960,
              0.6,
              652628224,
              0.7,
              651707157,
              0.8,
              650520616,
              0.9,
              653017210,
              1,
              648759228,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="painGradientBg"
          x1="0"
          x2="0"
          y1="1"
          y2="0"
        />
        <RNSVGLinearGradient
          gradient={
            [
              0,
              -13730510,
              0.1,
              -11171025,
              0.2,
              -9920712,
              0.3,
              -415707,
              0.4,
              -28928,
              0.5,
              -1086464,
              0.6,
              -1683200,
              0.7,
              -2604267,
              0.8,
              -3790808,
              0.9,
              -1294214,
              1,
              -5552196,
            ]
          }
          gradientTransform={null}
          gradientUnits={1}
          name="painGradientLine"
          x1="0"
          x2="0"
          y1={36}
          y2={4}
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          {
            "brushRef": "painGradientBg",
            "type": 1,
          }
        }
        height={40}
        propList={
          [
            "fill",
          ]
        }
        rx={4}
        width={120}
        x={0}
        y={0}
      />
      <RNSVGPath
        d="M 4,21.41824 L 13.333333333333334,19.2832 L 22.666666666666668,18.976 L 32,21.28 L 41.333333333333336,23.2 L 50.66666666666667,23.2 L 60,23.2 L 69.33333333333334,23.2 L 78.66666666666667,23.2 L 88,23.2 L 97.33333333333334,23.2 L 106.66666666666667,23.2 L 116,23.2"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "brushRef": "painGradientLine",
            "type": 1,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGCircle
        cx={4}
        cy={26.4}
        fill={
          {
            "payload": 4294551589,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={13.333333333333334}
        cy={20}
        fill={
          {
            "payload": 4293880832,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={22.666666666666668}
        cy={13.600000000000001}
        fill={
          {
            "payload": 4292363029,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={32}
        cy={16.8}
        fill={
          {
            "payload": 4293284096,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={41.333333333333336}
        cy={23.2}
        fill={
          {
            "payload": 4294938368,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`IntensitySparkline Snapshot Tests should match snapshot with custom color 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <RNSVGSvgView
    bbHeight={40}
    bbWidth={120}
    focusable={false}
    height={40}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 40,
          "width": 120,
        },
      ]
    }
    width={120}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0,
              640580914,
              0.1,
              643140399,
              0.2,
              644390712,
              0.3,
              653895717,
              0.4,
              654282496,
              0.5,
              653224960,
              0.6,
              652628224,
              0.7,
              651707157,
              0.8,
              650520616,
              0.9,
              653017210,
              1,
              648759228,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="painGradientBg"
          x1="0"
          x2="0"
          y1="1"
          y2="0"
        />
        <RNSVGLinearGradient
          gradient={
            [
              0,
              -13730510,
              0.1,
              -11171025,
              0.2,
              -9920712,
              0.3,
              -415707,
              0.4,
              -28928,
              0.5,
              -1086464,
              0.6,
              -1683200,
              0.7,
              -2604267,
              0.8,
              -3790808,
              0.9,
              -1294214,
              1,
              -5552196,
            ]
          }
          gradientTransform={null}
          gradientUnits={1}
          name="painGradientLine"
          x1="0"
          x2="0"
          y1={36}
          y2={4}
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          {
            "brushRef": "painGradientBg",
            "type": 1,
          }
        }
        height={40}
        propList={
          [
            "fill",
          ]
        }
        rx={4}
        width={120}
        x={0}
        y={0}
      />
      <RNSVGPath
        d="M 4,18.784000000000002 L 13.333333333333334,15.520000000000003 L 22.666666666666668,13.600000000000001 L 32,13.600000000000001 L 41.333333333333336,13.600000000000001 L 50.66666666666667,13.600000000000001 L 60,13.600000000000001 L 69.33333333333334,13.600000000000001 L 78.66666666666667,13.600000000000001 L 88,13.600000000000001 L 97.33333333333334,13.600000000000001 L 106.66666666666667,13.600000000000001 L 116,13.600000000000001"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4294929259,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGCircle
        cx={4}
        cy={26.4}
        fill={
          {
            "payload": 4294551589,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={13.333333333333334}
        cy={20}
        fill={
          {
            "payload": 4293880832,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={22.666666666666668}
        cy={13.600000000000001}
        fill={
          {
            "payload": 4292363029,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`IntensitySparkline Snapshot Tests should match snapshot with typical intensity pattern 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <RNSVGSvgView
    bbHeight={40}
    bbWidth={120}
    focusable={false}
    height={40}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 40,
          "width": 120,
        },
      ]
    }
    width={120}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0,
              640580914,
              0.1,
              643140399,
              0.2,
              644390712,
              0.3,
              653895717,
              0.4,
              654282496,
              0.5,
              653224960,
              0.6,
              652628224,
              0.7,
              651707157,
              0.8,
              650520616,
              0.9,
              653017210,
              1,
              648759228,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="painGradientBg"
          x1="0"
          x2="0"
          y1="1"
          y2="0"
        />
        <RNSVGLinearGradient
          gradient={
            [
              0,
              -13730510,
              0.1,
              -11171025,
              0.2,
              -9920712,
              0.3,
              -415707,
              0.4,
              -28928,
              0.5,
              -1086464,
              0.6,
              -1683200,
              0.7,
              -2604267,
              0.8,
              -3790808,
              0.9,
              -1294214,
              1,
              -5552196,
            ]
          }
          gradientTransform={null}
          gradientUnits={1}
          name="painGradientLine"
          x1="0"
          x2="0"
          y1={36}
          y2={4}
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          {
            "brushRef": "painGradientBg",
            "type": 1,
          }
        }
        height={40}
        propList={
          [
            "fill",
          ]
        }
        rx={4}
        width={120}
        x={0}
        y={0}
      />
      <RNSVGPath
        d="M 4,19.185721600000004 L 13.333333333333334,16.093888000000003 L 22.666666666666668,14.419840000000004 L 32,14.771200000000004 L 41.333333333333336,18.016000000000002 L 50.66666666666667,21.28 L 60,23.2 L 69.33333333333334,23.2 L 78.66666666666667,23.2 L 88,23.2 L 97.33333333333334,23.2 L 106.66666666666667,23.2 L 116,23.2"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "brushRef": "painGradientLine",
            "type": 1,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGCircle
        cx={4}
        cy={26.4}
        fill={
          {
            "payload": 4294551589,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={13.333333333333334}
        cy={20}
        fill={
          {
            "payload": 4293880832,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={22.666666666666668}
        cy={13.600000000000001}
        fill={
          {
            "payload": 4292363029,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={32}
        cy={7.199999999999999}
        fill={
          {
            "payload": 4293673082,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={41.333333333333336}
        cy={10.399999999999999}
        fill={
          {
            "payload": 4291176488,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={50.66666666666667}
        cy={16.8}
        fill={
          {
            "payload": 4293284096,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={60}
        cy={23.2}
        fill={
          {
            "payload": 4294938368,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
